# coordipai-web-server

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  test.yml
src/: database.py  main.py
src/auth/: config.py  jwt.py  models.py  router.py  schemas.py  service.py
src/exceptions/: definitions.py  handler.py  schemas.py
